--- a/산업공학특론I_3주차_확률변수&확률분포.Rmd
+++ b/산업공학특론I_3주차_확률변수&확률분포.Rmd
@@ -14,6 +14,54 @@ knitr::opts_chunk$set(fig.width=12, fig.height=12)
 <br>
 <br>
 
+## [시뮬레이션]
+
+### 1. 중심극한정리
+
+```{r simul_clt}
+
+x <- list()
+
+for (i in 1:100){
+  x[[i]] <- rnorm(10000, mean = 20, sd = 10)
+}
+length(x)
+meanx <- Reduce('+',x) / length(x)
+
+mean(meanx)
+sd(meanx)
+```
+
+
+### 2. 평균, 분산 
+
+```{r simul_meanvar}
+
+meanvar <- function(dist, n=10000, param){
+  # exponential, binomial
+  if (dist == 'expo'){ # param= lambda
+    rand <- rexp(n, rate = param[1])
+    m <- 1/param[1]; v <- 1/param[1]^2
+  } else if (dist == 'binom'){ # param = n,p
+    rand <- rbinom(n, size = param[1], prob = param[2])
+    m <- param[1]*param[2]; v <- param[1]* param[2] *(1-param[2])
+  }
+  
+  
+  
+  print(paste('시뮬레이션 결과: ',mean(rand), var(rand)))
+  print(paste('산출공식:', m, v))
+}
+
+meanvar('expo',n=100, 0.1)
+meanvar('expo', n=10000, 0.1)
+meanvar('binom', n=10000, c(100, 0.2))
+
+```
+
+
+## [데이터분석]
+
 ### 0. 대상 데이터 확보: 공구 마모 데이터셋
 (https://www.kaggle.com/datasets/shivamb/machine-predictive-maintenance-classification)
 
@@ -40,6 +88,38 @@ knitr::opts_chunk$set(fig.width=12, fig.height=12)
 ### 1. 데이터 탐색 (EDA) 및 전처리
 ```{r data_eda}
 
+list.files(pattern =".csv" ) # 작업공간에서 파일 이름 찾기
+dat <- read.csv(list.files(pattern =".csv" ))
+head(dat)
+
+
+#불필요한 변수 삭제
+dat <- dat[,-c(1:2)]
+
+summary(dat)
+
+
+dat$Target <- as.factor(dat$Target)
+summary(dat)
+
+# 데이터 탐색을 위한 시각화 수행
+table(dat$Target)
+dat$Type <- as.factor(dat$Type)
+dat$Failure.Type <- as.factor(dat$Failure.Type)
+head(dat)
+
+visualize <- function(x){
+  if(is.factor(x)){
+    barplot(table(x), col='grey' )
+  } else {
+    hist(x, col = 'grey')
+  }
+}
+par(mfrow=c(4,2))
+for (i in 1:ncol(dat)){
+  visualize(x=dat[,i])
+}
+
 ```
 
 <br>
@@ -48,6 +128,10 @@ knitr::opts_chunk$set(fig.width=12, fig.height=12)
 
 ### 2. 데이터 그룹화 및 기술통계량 검토
 ```{r data_group}
+
+dat_split <- split(dat$Tool.wear..min., dat$Target)
+summary(dat_split[[1]])
+summary(dat_split[[2]])
 
 ```
 
@@ -58,5 +142,21 @@ knitr::opts_chunk$set(fig.width=12, fig.height=12)
 ### 3. 확률분포 적합
 
 ```{r data_dist}
+
+library('fitdistrplus')
+
+
+names(dat_split)
+normal <- dat_split[[1]]
+fail <- dat_split[[2]]
+
+#print( paste('Normal case:', fitdist(normal,distr = 'exp')))
+#print( paste('Failure case:', fitdist(fail,distr = 'exp')))
+
+fitdist(normal, 'exp')
+fitdist(fail,'exp')
+
+fitdist(normal,'norm')
+fitdist(fail,'norm')
 
 ```
